# agentseek

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README.zh.md  mkdocs.yml  pyproject.toml  tox.ini
.agents/skills/documentation-writer/: SKILL.md
.github/workflows/: main.yml  on-release-main.yml
contrib/agentseek-cli/: pyproject.toml
contrib/agentseek-cli/tests/: test_create.py  test_templates_render.py
contrib/agentseek-contextseek/: README.md
docs/: docs.md  docs.zh.md  index.md  index.zh.md  lifecycle.md  lifecycle.zh.md
docs/blog/: introducing-agentseek.md  introducing-agentseek.zh.md
docs/concepts/: index.md  index.zh.md  lifecycle-toolkit.md  lifecycle-toolkit.zh.md
docs/explanation/: bub-relationship.md  bub-relationship.zh.md  cli-surface.md  cli-surface.zh.md  extension-model.md  extension-model.zh.md  index.md  index.zh.md  langchain-relationship.md  langchain-relationship.zh.md  runtime-data-model.md  runtime-data-model.zh.md  what-agentseek-is.md  what-agentseek-is.zh.md  where-things-live.md  where-things-live.zh.md
docs/get-started/: index.md  index.zh.md
docs/guides/: check-project.md  check-project.zh.md  create-project.md  create-project.zh.md  index.md  index.zh.md  inspect-project.md  inspect-project.zh.md  run-local-development.md  run-local-development.zh.md  run-project-tasks.md  run-project-tasks.zh.md
docs/how-to/: author-a-contrib-plugin.md  author-a-contrib-plugin.zh.md  use-contextseek.md  use-contextseek.zh.md
docs/reference/: cli.md  cli.zh.md  file-layout.md  file-layout.zh.md  index.md  index.zh.md  lifecycle-spec.md  lifecycle-spec.zh.md  packages.md  packages.zh.md  templates.md  templates.zh.md
docs/tutorials/: 01-quick-demo-cli.md  01-quick-demo-cli.zh.md  02-first-harness-app.md  02-first-harness-app.zh.md  03-add-a-skill-and-mcp.md  03-add-a-skill-and-mcp.zh.md
overrides/partials/top-nav/: menu.html
skills/: README.md
skills/langchain-cn-models/: SKILL.md
skills/langchain-cn-models/reference/: integration-tests.md
skills/langchain-cn-models/template/: chat_model.py
skills/langchain-dev-guide/: SKILL.md
skills/langchain-dev-guide/reference/: contextseek-middleware.md  contextseek-params.md
src/agentseek/: __main__.py  cli.py  env.py
src/agentseek/cli/: __init__.py  banner.py  runtime.py
src/skills/agentseek-lifecycle/: SKILL.md
templates/: index.json
templates/bub/contextseek/: README.md
templates/bub/contextseek/{{cookiecutter.project_slug}}/: .env.example  Dockerfile  README.md  pyproject.toml
templates/bub/contextseek/{{cookiecutter.project_slug}}/.agentseek/: lifecycle.toml
templates/bub/contextseek/{{cookiecutter.project_slug}}/frontend/: README.md  vite.config.ts
templates/bub/default/: README.md
templates/bub/default/{{cookiecutter.project_slug}}/: .env.example  README.md  pyproject.toml
templates/bub/default/{{cookiecutter.project_slug}}/.agentseek/: lifecycle.toml
templates/bub/default/{{cookiecutter.project_slug}}/frontend/: .env.example  README.md
templates/deepagents/content-builder/: README.md
templates/deepagents/content-builder/{{cookiecutter.project_slug}}/: .env.example  README.md  pyproject.toml
templates/deepagents/content-builder/{{cookiecutter.project_slug}}/.agentseek/: lifecycle.toml
templates/deepagents/default/: README.md  cookiecutter.json
templates/deepagents/default/{{cookiecutter.project_slug}}/: .env.example  README.md  pyproject.toml
templates/deepagents/default/{{cookiecutter.project_slug}}/.agentseek/: lifecycle.toml
templates/deepagents/research/: README.md
templates/deepagents/research/{{cookiecutter.project_slug}}/: .env.example  README.md  pyproject.toml
templates/deepagents/research/{{cookiecutter.project_slug}}/.agentseek/: lifecycle.toml
templates/deepagents/research/{{cookiecutter.project_slug}}/frontend/: .env.example
templates/langchain/agentic-rag/: README.md
templates/langchain/agentic-rag-openvino/: README.md
templates/langchain/agentic-rag/{{cookiecutter.project_slug}}/: .env.example  README.md  pyproject.toml
templates/langchain/agentic-rag/{{cookiecutter.project_slug}}/.agentseek/: lifecycle.toml
templates/langchain/agentic-rag/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: agent.py  ingest.py
templates/langchain/cli-remote/: README.md  cookiecutter.json
templates/langchain/cli-remote/{{cookiecutter.project_slug}}/: .env.example  README.md  pyproject.toml
templates/langchain/cli-remote/{{cookiecutter.project_slug}}/.agentseek/: lifecycle.toml
templates/langchain/cli-remote/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: gateway_binding.py  remote_graph.py  settings.py
templates/langchain/default/{{cookiecutter.project_slug}}/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
templates/langchain/default/{{cookiecutter.project_slug}}/.agentseek/: lifecycle.toml
templates/langchain/default/{{cookiecutter.project_slug}}/frontend/: .env.example  README.md  server.ts  vite.config.ts
templates/langchain/default/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: demo_binding.py  dev.py  feishu.py  settings.py
templates/langchain/markdown-messages/{{cookiecutter.project_slug}}/: .env.example  README.md  pyproject.toml
templates/langchain/markdown-messages/{{cookiecutter.project_slug}}/.agentseek/: lifecycle.toml
templates/langchain/markdown-messages/{{cookiecutter.project_slug}}/frontend/: vite.config.ts
templates/langchain/markdown-messages/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: agent.py
templates/langchain/sandbox/{{cookiecutter.project_slug}}/: .env.example  README.md  pyproject.toml
templates/langchain/sandbox/{{cookiecutter.project_slug}}/.agentseek/: lifecycle.toml
templates/langchain/sandbox/{{cookiecutter.project_slug}}/frontend/: .env.example  vite.config.ts
tests/: test_cli.py  test_entrypoint.py
tests/cli_commands/: test_create.py  test_lifecycle.py  test_templates_registry.py  test_templates_render.py
(+26 files in other folders)
