[project]
name = "agentseek"
version = "0.1.0"
description = "A database-native Agent Harness for runtime data workflows, powered by Bub"
authors = [{ name = "Chojan Shang", email = "psiace@apache.org" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.12,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bub>=0.3.7",
    "logfire>=4.33.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
cli = [
    "agentseek-cli",
]

[project.scripts]
agentseek = "agentseek.__main__:app"
bub = "agentseek.__main__:app"

[project.urls]
Repository = "https://github.com/ob-labs/agentseek"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
    "tox-uv>=1.29.0",
    "ty>=0.0.14",
    "ruff>=0.14.14",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.2",
    "deepagents>=0.5.3",
    "langchain-openai>=0.3.0",
    "mkdocs-terminal>=4.8.0",
    "mkdocs-static-i18n>=1.3.0",
]
plugins = [
    "bub-feishu",
    "bub-mcp",
    "agentseek-schedule-sqlalchemy",
    "agentseek-ag-ui",
    "agentseek-langchain",
    "agentseek-observability",
    "agentseek-tapestore-oceanbase",
    "agentseek-contextseek",
]

[build-system]
requires = ["pdm-backend", "pdm-build-skills>=0.1.0a3"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = [
    "src/agentseek",
    "src/skills",
]
skills = [
    { git = "https://github.com/PsiACE/skills.git", subpath = "skills", include = ["friendly-python", "piglet"] },
]

# Lock file is always resolved against PyPI. For faster install during dev, use:
#   UV_INDEX_URL=https://pypi.tuna.tsinghua.edu.cn/simple uv sync
[tool.uv]
index-url = "https://pypi.org/simple"

[tool.uv.sources]
# bub-contrib: pin to a specific commit so resolves are reproducible across environments.
bub-feishu = { git = "https://github.com/bubbuild/bub-contrib.git", rev = "5374c8ffc8a38091a4e26dcc455c54f3c9e71aff", subdirectory = "packages/bub-feishu" }
bub-mcp = { git = "https://github.com/bubbuild/bub-contrib.git", rev = "5374c8ffc8a38091a4e26dcc455c54f3c9e71aff", subdirectory = "packages/bub-mcp" }
bub-tapestore-sqlalchemy = { git = "https://github.com/bubbuild/bub-contrib.git", rev = "5374c8ffc8a38091a4e26dcc455c54f3c9e71aff", subdirectory = "packages/bub-tapestore-sqlalchemy" }
agentseek-tapestore-oceanbase = { workspace = true }
agentseek-langchain = { workspace = true }
agentseek-observability = { workspace = true }
agentseek-schedule-sqlalchemy = { workspace = true }
agentseek-ag-ui = { workspace = true }
agentseek-contextseek = { workspace = true }
agentseek-cli = { workspace = true }

[tool.uv.workspace]
members = [
    "contrib/agentseek-ag-ui",
    "contrib/agentseek-cli",
    "contrib/agentseek-langchain",
    "contrib/agentseek-observability",
    "contrib/agentseek-schedule-sqlalchemy",
    "contrib/agentseek-tapestore-oceanbase",
    "contrib/agentseek-contextseek",
    ".agentseek/agentseek-project",
]

[tool.ty.environment]
python = "./.venv"
python-version = "3.12"

[tool.ty.analysis]
# DeepAgents is a dev dependency used by contrib examples and tests.
allowed-unresolved-imports = ["deepagents.**"]

[tool.ty.src]
# references/ = third-party or example code.
# templates/ = cookiecutter sources containing jinja2 placeholders, not real Python.
exclude = [
    "references",
    "templates",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
extend-exclude = [
    "templates",
]

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"examples/ag_ui_langchain/test_middleware.py" = ["S101", "TRY003"]
"contrib/*/src/tests/*" = ["S101"]
"contrib/*/tests/*" = ["S101"]
"contrib/*/src/**/*.py" = ["TRY003"]
"src/skills/github-repo-cards/scripts/*.py" = ["S603", "S607"]

[tool.ruff.format]
preview = true
