[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }} — DeepAgents research agent with Tavily search, served by langgraph dev."
authors = [{ name = "{{ cookiecutter.author }}" }]
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.5.3",
    "langchain>=1.0",
    "langchain-anthropic>=1.0",
    "langchain-google-genai>=4.0",
    "langchain-openai>=0.3",
    "tavily-python>=0.5",
    "httpx[socks]>=0.28",
    "markdownify>=0.13",
    "python-dotenv>=1.0",
    "langgraph-cli[inmem]>=0.4",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
