[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }} — LangChain agentic RAG with OceanBase/SeekDB vector store, served by langgraph dev."
authors = [{ name = "{{ cookiecutter.author }}" }]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx[socks]>=0.28",
    "langchain>=1.0",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-oceanbase[pyseekdb]>=0.1.0",
    "langchain-openai>=0.3",
    "langchain-text-splitters>=0.3.0",
    "langgraph-cli[inmem]>=0.4",
    "python-dotenv>=1.0",
    "requests",
]

[project.scripts]
ingest = "{{ cookiecutter.project_slug }}.ingest:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
