[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }} — LangChain agent bound through agentseek-langchain."
authors = [{ name = "{{ cookiecutter.author }}" }]
requires-python = ">=3.12"
dependencies = [
    "bub==0.3.9",
    "agentseek-ag-ui",
    "agentseek-langchain",
    "bub-feishu",
    "copilotkit>=0.1.80",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "httpx[socks]>=0.28",
    "openinference-instrumentation-langchain>=0.1.66",
    "opentelemetry-exporter-otlp-proto-http>=1.31.0",
    "opentelemetry-sdk>=1.31.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
serve = "{{ cookiecutter.project_slug }}.dev:main"
serve-feishu = "{{ cookiecutter.project_slug }}.feishu:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
{% if cookiecutter._agentseek_source_path %}
agentseek-ag-ui = { path = "{{ cookiecutter._agentseek_source_path }}/contrib/agentseek-ag-ui", editable = true }
agentseek-langchain = { path = "{{ cookiecutter._agentseek_source_path }}/contrib/agentseek-langchain", editable = true }
bub-feishu = { git = "https://github.com/bubbuild/bub-contrib.git", rev = "5374c8ffc8a38091a4e26dcc455c54f3c9e71aff", subdirectory = "packages/bub-feishu" }
{% else %}
agentseek-ag-ui = { git = "{{ cookiecutter._agentseek_source_url }}", subdirectory = "contrib/agentseek-ag-ui" }
agentseek-langchain = { git = "{{ cookiecutter._agentseek_source_url }}", subdirectory = "contrib/agentseek-langchain" }
bub-feishu = { git = "https://github.com/bubbuild/bub-contrib.git", rev = "5374c8ffc8a38091a4e26dcc455c54f3c9e71aff", subdirectory = "packages/bub-feishu" }
{% endif %}
