[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }} - a LangChain create_agent served with langgraph dev and streamed to a React frontend via useStream."
authors = [{ name = "{{ cookiecutter.author }}" }]
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.2,<1.4",
    "langchain-openai>=1.2.2,<1.3",
    "httpx[socks]>=0.28",
    "langgraph-cli[inmem]>=0.4.26,<0.5",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
